--- a/start.css
+++ b/start.css
@@ -1,34 +1,50 @@
-.flex-col {
-    display: flex;
-    flex-direction: column;
-}
-
-.flex-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 1em;
+    justify-items: stretch;
+    align-items: stretch;
 }
 
 .green {
-    width: 100%;
-}
-
-.yellow {
-    width: 100%;
-}
-
-.red {
-    width: 100%;
+    grid-column: 1/4;
+    grid-row: 1/1;
 }
 
 .orange {
-    width: 100%;
+    grid-column: 1/3;
+    grid-row: 3/3;
 }
 
 .blue {
-    width: 100%;
-    height: 100%;
+    grid-column: 3/3;
+    grid-row: 2/4;
 }
+
+.yellow{
+    grid-column: 1/1;
+    grid-row: 2/3;
+
+}
+
+.yellow_grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.red{
+    grid-column: 2/3;
+    grid-row: 2/3;
+
+}
+
+.red_grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+
 
 
 
